Increase author input gap; fix invalid info chars

--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ input.author-0, input.author-1 {
 
 .book-field-input.author {
     display: flex;
+    gap: 8px;
     flex-wrap: wrap;
 }
 
